--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
   intl: ^0.18.0  # <--- Tambahan untuk format tanggal
   cached_network_image: ^3.2.3  # <--- Tambahan untuk menampilkan gambar dari URL
+  url_launcher: ^6.1.12 
 
 dev_dependencies:
   flutter_test:
