Refactor TargetPenggunaanScreen for improved UI and functionality
- Updated imports and added color constants for better maintainability.
- Enhanced date picker with custom theme.
- Added loading dialog during Firestore save operation.
- Improved error handling with user-friendly messages.
- Refactored UI components for better layout and design consistency.
- Added section labels for better form organization.
- Updated dropdown and text field widgets for improved styling and validation.
- Added new dependencies in pubspec.yaml for caching and image handling.

Fix change password screen to handle null values correctly

- Removed unnecessary null check in password input change handler.

Improve splash screen timer management

- Added timer cancellation in dispose method to prevent memory leaks.

Update GeneratedPluginRegistrant.swift to remove unnecessary comments

- Cleaned up the file for better readability.

Update pubspec.lock and pubspec.yaml with new dependencies

- Added cached_network_image and other utility packages for enhanced functionality.
- Updated Firebase dependencies to the latest versions.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,22 +11,24 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
 
+  # Firebase
   firebase_core: ^2.16.0
+  cloud_firestore: ^4.9.1
 
+  # State Management
   bloc: ^9.0.0
   flutter_bloc: ^9.1.0
   equatable: ^2.0.5
 
+  # Local Package
   user_repository:
     path: packages/user_repository
 
- berita
-  intl: ^0.18.0  # <--- Tambahan untuk format tanggal
-  cached_network_image: ^3.2.3  # <--- Tambahan untuk menampilkan gambar dari URL
-  url_launcher: ^6.1.12 
-=======
-  intl: ^0.18.0 
- main
+  # Utilities
+  intl: ^0.18.0
+  cached_network_image: ^3.2.3
+  url_launcher: ^6.1.12
+  firebase_auth: ^4.16.0
 
 dev_dependencies:
   flutter_test:
